@@ -1,3 +1,6 @@
+2012-07-21  6.7.8-6 Glenn Randers-Pehrson <glennrp@image...>
+  * Make sure "intent" is initialized in the PNG decoder.
+ 
 2012-07-21  6.7.8-5 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.8-5, SVN revision 8717.
 
